--- a/src/assets/css/sass/controle_aula/_aluno_content.scss
+++ b/src/assets/css/sass/controle_aula/_aluno_content.scss
@@ -117,8 +117,10 @@ nav.nav_cursos_aluno {
         @extend .btn-default;
         background:#f0f0f0;
         float: left;
+        cursor: pointer;
         &:hover {
             background: #fff;
+            box-shadow: 0px 1px 1px #ccc;
         }
         &:active{ background: #f0f0f0;
             box-shadow: inset 0px 0px 2px #222;
