--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -991,9 +991,11 @@ nav.nav_cursos_aluno ul li .active {
 #aluno_content .btn_add {
   background: #f0f0f0;
   float: left;
+  cursor: pointer;
 }
 #aluno_content .btn_add:hover {
   background: #fff;
+  box-shadow: 0px 1px 1px #ccc;
 }
 #aluno_content .btn_add:active {
   background: #f0f0f0;
