--- a/src/assets/css/sass/controle_aula/_aluno_content.scss
+++ b/src/assets/css/sass/controle_aula/_aluno_content.scss
@@ -50,9 +50,7 @@
    border-radius: 50%;
 }
 
-#page_content{
-    position: relative;
-}
+
 
 nav.nav_cursos_aluno {
     @extend .nav_flex;
@@ -338,8 +336,8 @@ nav.nav_cursos_aluno {
                 min-width: 200px;
                 flex-grow: 1;
               //  border: $border-set-default;
-              background: #f8f8f8;
-              box-shadow: 0px 1px 2px #ccc;
+              background: #eee;
+              box-shadow: 0px 0px 2px #aaa;
                 padding-top:15px;
                 padding-bottom:15px;
                 margin-top:1px;
