--- a/src/assets/css/sass/login/_index.scss
+++ b/src/assets/css/sass/login/_index.scss
@@ -1,6 +1,8 @@
 @use "../abstracts" as *;
 
 #page_login{
+    opacity: 0;
+    transition: opacity 10s ease-in-out;
     display:flex;
     align-items: center;
     justify-content: center;
