--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -582,7 +582,7 @@ inputs, .input-primary {
   width: 100%;
   padding-bottom: -2px;
 }
-#header_admin #header_admin_center #login_info #user_info #bg_username #user_privilegio {
+#header_admin #header_admin_center #login_info #user_info #bg_username #user_privilege {
   font-size: 14px;
   color: #999;
 }
