--- a/src/assets/css/sass/style.scss
+++ b/src/assets/css/sass/style.scss
@@ -28,6 +28,26 @@
   }
 }
 
+
+.table_info{
+  border-collapse: collapse;
+  width:100%;
+  th, td{ padding:5px; vertical-align: middle;}
+
+}
+
+#users_table_info{
+
+  .user_foto {
+    text-align: center;
+    img{width: 50px; height: 50px; border-radius: 50%; }
+  }
+  .user_level{ text-align: center;
+  width: 20px;
+
+}
+}
+
 #block_screen{
   width:100%; 
   min-height: 100vh;
