--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1849,7 +1849,7 @@ option[disabled] {
 }
 
 #page_login {
-  opacity: 0;
+  opacity: 1;
   transition: opacity 10s ease-in-out;
   display: flex;
   align-items: center;
@@ -1940,6 +1940,28 @@ option[disabled] {
   text-transform: uppercase;
   color: #245da7;
   border-bottom: 2px solid #ed1860;
+}
+
+.table_info {
+  border-collapse: collapse;
+  width: 100%;
+}
+.table_info th, .table_info td {
+  padding: 5px;
+  vertical-align: middle;
+}
+
+#users_table_info .user_foto {
+  text-align: center;
+}
+#users_table_info .user_foto img {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+}
+#users_table_info .user_level {
+  text-align: center;
+  width: 20px;
 }
 
 #block_screen {
