Form users - WIP

--- a/src/components/users/index.html
+++ b/src/components/users/index.html
@@ -1,7 +1,18 @@
   
 <div class="components" id="page_users">
     <h1>Usuários</h1>
+    <div id='bg_form_add_user'>
+      <div class='nav_forms nav_forms_users_page'>
+      <ul>
+        <li><a id='btn_add_user'>Adicionar Usuário</a></li>
+      </ul>
+      
+      </div>
     <div id='users_content'>
-    
+
+  </div>
+
+
+
   </div>
   </div>
