--- a/src/assets/css/sass/elements/header_admin.scss
+++ b/src/assets/css/sass/elements/header_admin.scss
@@ -64,7 +64,7 @@
               width:100%;
               padding-bottom:-2px;
             }
-            #user_privilege{
+            #user_role{
               font-size:14px; color:#999;
             }
           }
