--- a/src/components/geradorContrato/index.html
+++ b/src/components/geradorContrato/index.html
@@ -41,7 +41,7 @@
       <div class='div_input'id='div_resp_tel' ><label>Tel.: </label> <input id="resp_tel" type="text" /></div>
       </fieldset>
       <form id="form_contrato">
-        <fieldset id='fieldset_aluno' class='x'>
+        <fieldset id='fieldset_aluno'>
    
         <div class='div_input' id='div_aluno_nome'>
           <div id='block_aluno'></div>
