--- a/src/assets/css/sass/style.scss
+++ b/src/assets/css/sass/style.scss
@@ -6,6 +6,7 @@
 @use 'controle_aula';
 @use 'gerador_contrato';
 @use 'login';
+@use 'users';
 
 
 //Components
@@ -26,26 +27,6 @@
     color:$primary-color;
     border-bottom:2px solid $secondary-color;
   }
-}
-
-
-.table_info{
-  border-collapse: collapse;
-  width:100%;
-  th, td{ padding:5px; vertical-align: middle;}
-
-}
-
-#users_table_info{
-
-  .user_foto {
-    text-align: center;
-    img{width: 50px; height: 50px; border-radius: 50%; }
-  }
-  .user_level{ text-align: center;
-  width: 20px;
-
-}
 }
 
 #block_screen{
