--- a/src/components/controleAula/formAddCurso.html
+++ b/src/components/controleAula/formAddCurso.html
@@ -1,4 +1,4 @@
-<form id="form_add_curso" class="forms">
+<form id="form_add_curso" class="forms_controle_aula">
     <span class="btn_close_form">X</span>
     <h3><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-journal-plus" viewBox="0 0 16 16">
       <path fill-rule="evenodd" d="M8 5.5a.5.5 0 0 1 .5.5v1.5H10a.5.5 0 0 1 0 1H8.5V10a.5.5 0 0 1-1 0V8.5H6a.5.5 0 0 1 0-1h1.5V6a.5.5 0 0 1 .5-.5z"/>
