--- a/src/components/controleAula/formAddFeedbackBimestral.html
+++ b/src/components/controleAula/formAddFeedbackBimestral.html
@@ -1,4 +1,4 @@
-<form id="form_add_feedback_bimestral" class="forms">
+<form id="form_add_feedback_bimestral" class="forms_controle_aula">
   <span class="btn_close_form">X</span>
   <h3><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-clipboard-plus" viewBox="0 0 16 16">
     <path fill-rule="evenodd" d="M8 7a.5.5 0 0 1 .5.5V9H10a.5.5 0 0 1 0 1H8.5v1.5a.5.5 0 0 1-1 0V10H6a.5.5 0 0 1 0-1h1.5V7.5A.5.5 0 0 1 8 7z"/>
