--- a/src/components/users/formAddUser.html
+++ b/src/components/users/formAddUser.html
@@ -1,23 +1,34 @@
-<form id='form_add_user' class='forms' >
+<form id='form_add_user' class=''>
+    <h3>
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-plus-fill" viewBox="0 0 16 16">
+            <path d="M1 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H1zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
+            <path fill-rule="evenodd" d="M13.5 5a.5.5 0 0 1 .5.5V7h1.5a.5.5 0 0 1 0 1H14v1.5a.5.5 0 0 1-1 0V8h-1.5a.5.5 0 0 1 0-1H13V5.5a.5.5 0 0 1 .5-.5z"/>
+        </svg>
+        Adicionar Usuário</h3>
     <span class="btn_close_form">X</span>
 
     <div>
-    <input type='text' id='username' placeholder="Username">
-</div>
-<div>
-    <input type='text' id='user_email' placeholder="Email">
+        <input class='name' type='text' id='username' placeholder="Username"/>
+    </div>
+    <div>
+        <input type='text' id='user_email' placeholder="Email"/>
+    </div>
+    <div>
+        <input type='number' max='5' id='user_privilege' placeholder="Privilégio"/>
+    </div>
 
-</div>
-<div>
-    <select>
-        <option value='admin'>Admin</option>
-        <option value='admin'>Atendente</option>
-        <option value='admin'>Professor</option>
-        <option value='admin'>Aluno</option>
-    </select>
-</div>
-<div>
-    <input type='text' id='user_email' placeholder="Role">
-</div>
-<input type='submit' value="Salvar">
+    <div>
+        <input type='text' id='user_photo_url' placeholder="Foto URL"/>
+    </div>
+    <div>
+        <select id='select_privilege''>
+            <option value='admin'>Admin</option>
+            <option value='admin'>Atendente</option>
+            <option value='admin'>Professor</option>
+            <option value='admin'>Aluno</option>
+        </select>
+    </div>
+
+    <div class='div_submit'><input type='submit' value="Salvar"/></div>
+
 </form>
