--- a/src/components/users/index.html
+++ b/src/components/users/index.html
@@ -4,15 +4,16 @@
     <div id='bg_form_add_user'>
       <div class='nav_forms nav_forms_users_page'>
       <ul>
-        <li><a id='btn_add_user'>Adicionar Usuário</a></li>
+        <li><a id='btn_add_user'>
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-plus-fill" viewBox="0 0 16 16">
+            <path d="M1 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H1zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
+            <path fill-rule="evenodd" d="M13.5 5a.5.5 0 0 1 .5.5V7h1.5a.5.5 0 0 1 0 1H14v1.5a.5.5 0 0 1-1 0V8h-1.5a.5.5 0 0 1 0-1H13V5.5a.5.5 0 0 1 .5-.5z"/>
+          </svg> Usuário</a></li>
       </ul>
-      
       </div>
     <div id='users_content'>
 
   </div>
-
-
 
   </div>
   </div>
