--- a/src/components/users/formAddUser.html
+++ b/src/components/users/formAddUser.html
@@ -8,25 +8,36 @@
     <span class="btn_close_form">X</span>
 
     <div>
-        <input class='name' type='text' id='username' placeholder="Username"/>
+        <label>Nome: </label>
+        <input class='name' type='text' id='username' value='Fulano de Tal'/>
     </div>
     <div>
-        <input type='text' id='user_email' placeholder="Email"/>
+        <label>Email: </label>
+
+        <input type='email' id='user_email' value='fulano@email.com' />
     </div>
     <div>
-        <input type='number' max='5' id='user_privilege' placeholder="Privilégio"/>
+        <label>Privilégio: </label>
+        <input type='number' max='5' id='user_privilege' value='1' />
     </div>
 
+
     <div>
-        <input type='text' id='user_photo_url' placeholder="Foto URL"/>
+        <label>Password: </label>
+        <input type='password' id='password' value='123456'/>
     </div>
     <div>
-        <select id='select_privilege''>
+        <label>Categoria: </label>
+        <select id='select_user_role'>
             <option value='admin'>Admin</option>
             <option value='admin'>Atendente</option>
             <option value='admin'>Professor</option>
             <option value='admin'>Aluno</option>
         </select>
+    </div>
+    <div>
+        <label>Foto URL: </label>
+        <input type='text' id='user_photo_url' value='professorDefault.png'/>
     </div>
 
     <div class='div_submit'><input type='submit' value="Salvar"/></div>
