--- a/src/components/users/formAddUser.html
+++ b/src/components/users/formAddUser.html
@@ -1,4 +1,4 @@
-<form id='form_add_user' class=''>
+<form id='form_add_user' >
     <h3>
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-plus-fill" viewBox="0 0 16 16">
             <path d="M1 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H1zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
@@ -24,20 +24,20 @@
 
     <div>
         <label>Password: </label>
-        <input type='password' id='password' value='123456'/>
+        <input type='password' id='user_password' value='123456'/>
     </div>
     <div>
         <label>Categoria: </label>
         <select id='select_user_role'>
             <option value='admin'>Admin</option>
-            <option value='admin'>Atendente</option>
-            <option value='admin'>Professor</option>
-            <option value='admin'>Aluno</option>
+            <option value='atendente'>Atendente</option>
+            <option value='professor' selected>Professor</option>
+            <option value='aluno'>Aluno</option>
         </select>
     </div>
     <div>
         <label>Foto URL: </label>
-        <input type='text' id='user_photo_url' value='professorDefault.png'/>
+        <input type='text' id='user_photoURL' value='professorDefault.png'/>
     </div>
 
     <div class='div_submit'><input type='submit' value="Salvar"/></div>
