--- a/src/components/users/formConfigPerm.html
+++ b/src/components/users/formConfigPerm.html
@@ -8,7 +8,7 @@
     <span class="btn_close_form">X</span>
 
     <textarea  spellcheck="false" id='textarea_permissions' >
-etst
+  Carregando...
     </textarea>
 
     <div class='div_submit'><input type='submit' value="Salvar"/></div>
