--- a/src/components/users/index.html
+++ b/src/components/users/index.html
@@ -2,7 +2,7 @@
 <div class="components" id="page_users">
     <h1>Usuários</h1>
     <div id='bg_form_add_user'>
-      <div class='nav_forms nav_forms_users_page'>
+      <nav class='nav_forms nav_forms_users_page'>
 
       <ul>
         <li><a id='btn_config_permissions'>
@@ -18,7 +18,7 @@
             <path fill-rule="evenodd" d="M13.5 5a.5.5 0 0 1 .5.5V7h1.5a.5.5 0 0 1 0 1H14v1.5a.5.5 0 0 1-1 0V8h-1.5a.5.5 0 0 1 0-1H13V5.5a.5.5 0 0 1 .5-.5z"/>
           </svg> Usuário</a></li>
       </ul>
-      </div>
+      </nav>
     <div id='users_content'>
 
   </div>
