--- a/src/components/fluxoCaixa/index.html
+++ b/src/components/fluxoCaixa/index.html
@@ -1,7 +1,17 @@
   
 <div class="components" id="page_fluxo_caixa">
     <h1>Fluxo de Caixa</h1>
-   <div class='content_fluxo_caixa'>
+    <nav class='nav_forms nav_forms_entrada_caixa'>
+
+        <ul>
+          <li><a id='btn_form_entrada_caixa'>
+            + <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cash" viewBox="0 0 16 16">
+                <path d="M8 10a2 2 0 1 0 0-4 2 2 0 0 0 0 4z"/>
+                <path d="M0 4a1 1 0 0 1 1-1h14a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1H1a1 1 0 0 1-1-1V4zm3 0a2 2 0 0 1-2 2v4a2 2 0 0 1 2 2h10a2 2 0 0 1 2-2V6a2 2 0 0 1-2-2H3z"/>
+              </svg> Entrada de Caixa</a></li>
+        </ul>
+        </nav>
+   <div id='fluxo_caixa_content'>
 
    </div>
 
