--- a/src/assets/css/sass/abstracts/_tables.scss
+++ b/src/assets/css/sass/abstracts/_tables.scss
@@ -1,6 +1,20 @@
+@use 'variables' as *;
 .tables{
-    display: none;
+   
     width:100%;
     border-collapse: collapse;
     padding:5px;
+    th, td{
+        padding:5px 10px;
+    }
+    th{  background: $primary-color; color:#f0f0f0;
+         font-weight: normal;
+       vertical-align: middle;}
+}
+
+.table_info{
+    @extend .tables;
+    background:#f0f0f0;
+    border-collapse: collapse;
+    width:100%;
 }
