--- a/src/assets/css/sass/users/_index.scss
+++ b/src/assets/css/sass/users/_index.scss
@@ -16,15 +16,9 @@
   }
 }  
 
-.table_info{
-  background:#f0f0f0;
-
-  border-collapse: collapse;
-  width:100%;
-  th, td{ padding:5px; vertical-align: middle;}
-}
 
 #users_table_info{
+  @extend .table_info;
   .user_foto {
     text-align: center;
     img{width: 50px; height: 50px; border-radius: 50%; }
