--- a/src/components/geradorContrato/index.html
+++ b/src/components/geradorContrato/index.html
@@ -11,7 +11,10 @@
     <div class='fieldset' id='fieldset_resp'>
       <div class='div_input' id='div_resp_nome'> <label><span class='required'>*</span>Responsável: </label> <input
           required id="resp_nome" type="text" />
-        <div> <label id='label_checkbox_resp_aluno' for='checkbox_resp_aluno'> Marcar como Aluno(a) <input
+        <div id='div_btn_marcar_resp_aluno'> 
+          <label id='btn_marcar_resp_aluno' for='checkbox_resp_aluno'>
+             <span>Marcar como Aluno(a)</span> 
+             <input
               type='checkbox' id='checkbox_resp_aluno'> </label> </div>
       </div>
       <div class='div_input' id='div_resp_end'> <label><span class='required'>*</span>Endereço: </label> <input required
