--- a/src/components/geradorContrato/index.html
+++ b/src/components/geradorContrato/index.html
@@ -11,11 +11,11 @@
     <div class='fieldset' id='fieldset_resp'>
       <div class='div_input' id='div_resp_nome'> <label><span class='required'>*</span>Responsável: </label> <input
           required id="resp_nome" type="text" />
-        <div id='div_btn_marcar_resp_aluno'> 
+        <div id='div_btn_marcar_resp_aluno'>
           <label id='btn_marcar_resp_aluno' for='checkbox_resp_aluno'>
-             <span>Marcar como Aluno(a)</span> 
-             <input
-              type='checkbox' id='checkbox_resp_aluno'> </label> </div>
+            <span>Marcar como Aluno(a)</span>
+            <input type='checkbox' id='checkbox_resp_aluno'> </label>
+        </div>
       </div>
       <div class='div_input' id='div_resp_end'> <label><span class='required'>*</span>Endereço: </label> <input required
           id="resp_end" type="text" /> <label class='label_numero'><span class='required'>*</span>Nº: </label> <input
@@ -54,7 +54,8 @@
       <div class='div_input' id='div_aluno_rg'><label>RG: </label> <input id="aluno_rg" type="text" /></div>
       <div class='div_input' id='div_aluno_cel'><label>Cel.: </label> <input id="aluno_cel" type="text" /></div>
       <div class='div_input' id='div_aluno_tel'><label>Tel.: </label> <input id="aluno_tel" type="text" /></div>
-    </div><!--div fieldset-->
+    </div>
+    <!--div fieldset-->
     <div class='fieldset' id='fieldset_curso'>
       <div class='row'>
         <div class='div_input' id='div_curso_nome'> <label><span class='required'>&nbsp;&nbsp;
@@ -133,9 +134,10 @@
           <textarea id='curso_obs' placeholder="Descontos e outros detalhes aqui...">
               </textarea>
         </div>
-    </fieldset>
-    <!--fieldset_fieldset--> 
-    <button id='btn_salvar' type="submit">Salvar Contrato</button>
+      </div>
+      </div>
+      <!--div fieldset-->
+      <button id='btn_salvar' type="submit">Salvar Contrato</button>
   </form>
 </div>
 <!--pagina-->
