--- a/src/assets/css/sass/gerador_contrato/index.scss
+++ b/src/assets/css/sass/gerador_contrato/index.scss
@@ -12,7 +12,7 @@
     background: #f8f8f8;
     position: relative;
     padding: 40px;
-    width: 100%;
+    width: 900px;
     max-width: 100%;
     margin: 20px auto;
     display: block;
@@ -21,8 +21,9 @@
     color: #333;
     overflow: hidden;
     .fieldset {
+        transition: all 1s;
         max-width: 100%;
-        margin: 5px 20px;
+        margin: 10px 20px;
         border: 1px solid #aaa;
         padding: 20px;
         height: auto;
